@@ -1,3 +1,9 @@
+2008-04-17	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>
+
+	* ima/resources/uk.ts:
+	* ima/resources/uk.qm:
+	updated Ukrainian localization-files
+
 2008-04-17	Andrei Krueger	<anc/at/iki/dot/fi>
 
 	* ima/resources/fi.ts:
